add preview component templates

--- a/app/components/shared/notification_component/notification_component.html.slim
+++ b/app/components/shared/notification_component/notification_component.html.slim
@@ -3,12 +3,12 @@
     - if @dismiss
       = govuk_link_to(t("buttons.dismiss"), "#", class: "govuk-link--no-visited-state dismiss-link js-dismissible__link")
     - if render_title_and_body?
-      - if content[:title].present?
-        .govuk-notification__title = content[:title]
-      - if content[:body].present?
-        .govuk-notification__body == content[:body]
+      - if @title.present?
+        .govuk-notification__title = @title
+      - if @body.present?
+        .govuk-notification__body == @body
     - else
-      .govuk-notification__body == content
+      .govuk-notification__body == @notification
 
   - if @links.present?
     ul.govuk-list.govuk-notification__list
