--- a/app/components/shared/review_component/review_component.scss
+++ b/app/components/shared/review_component/review_component.scss
@@ -1,3 +1,5 @@
+@import '~govuk-frontend/govuk/base';
+
 .review-component {
   .review-component__heading {
     .review-component__section {
@@ -31,7 +33,7 @@
         margin-left: -15px;
       }
       @include govuk-media-query($from: tablet) {
-        border-top: 1px solid $govuk-border-colour;
+        border-top: 1px solid govuk-colour("mid-grey");
       }
       @include govuk-media-query($from: desktop) {
         display: table;
