--- a/app/components/shared/searchable_collection_component/searchable_collection_component.scss
+++ b/app/components/shared/searchable_collection_component/searchable_collection_component.scss
@@ -1,3 +1,5 @@
+@import '~govuk-frontend/govuk/base';
+
 .searchable-collection-component {
   .govuk-form-group {
     margin-bottom: 0;
@@ -12,7 +14,7 @@
 
   &.searchable-collection-component--border {
     background-color: #fff;
-    border: 2px solid $govuk-border-colour;
+    border: 2px solid govuk-colour("mid-grey");
     padding: 0;
 
     .govuk-checkboxes__item,
