--- a/app/frontend/src/styles/application/jobseekers/jobseeker.scss
+++ b/app/frontend/src/styles/application/jobseekers/jobseeker.scss
@@ -9,9 +9,9 @@
 
   &.publishers_identifications_new,
   &.jobseekers_saved_jobs_index,
-  &.jobseekers_subscriptions_index,
   &.jobseekers_accounts_show,
-  &[class*='jobseekers_job_applications_'] {
+  &[class*='jobseekers_job_applications_'],
+  &[class*='subscriptions_'] {
     .govuk-main-wrapper {
       > .govuk-width-container {
         margin-top: 0;
